tekton/triggers/el-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ansible-ee-pipeline-webhook
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: ansible-ee-pipeline-webhook
spec:
  port:
    targetPort: http-listener
  to:
    kind: 'Service'
    name: el-ansible-ee-pipeline-webhook
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
